crates/biome_configuration/src/snapshots/config_already_exists.snap
---
source: crates/biome_configuration/src/diagnostics.rs
expression: content
---
biome.json configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × It seems that a configuration file already exists
