crates/biome_configuration/src/snapshots/deserialization_error.snap
---
source: crates/biome_configuration/src/diagnostics.rs
expression: content
---
parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `:` but instead found `}`
  
  i Remove }
  


