crates/biome_configuration/src/snapshots/incorrect_pattern.snap
---
source: crates/biome_configuration/src/diagnostics.rs
expression: content
---
biome.json configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Couldn't parse the *******, reason: wildcards are either regular `*` or recursive `**`
