crates/biome_configuration/src/snapshots/unknown_rule.snap
---
source: crates/biome_configuration/src/diagnostics.rs
expression: content
---
rome.json configuration ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × invalid rule name `foo_bar`
